crates/pg_syntax/tests/snapshots/postgres_regress/subselect@50.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO bar VALUES (3, 1);"
---
InsertStmt@0..30
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "bar"
  Whitespace@15..16 " "
  SelectStmt@16..28
    Values@16..22 "VALUES"
    Whitespace@22..23 " "
    Ascii40@23..24 "("
    List@24..28
      AConst@24..25
        Iconst@24..25 "3"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..28
        Iconst@27..28 "1"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

