crates/pg_syntax/tests/snapshots/postgres_regress/subselect@61.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO orderstest VALUES (66, 7, false);"
---
InsertStmt@0..45
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "orderstest"
  Whitespace@22..23 " "
  SelectStmt@23..43
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..43
      AConst@31..33
        Iconst@31..33 "66"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..36
        Iconst@35..36 "7"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..43
        FalseP@38..43 "false"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

