crates/pg_syntax/tests/snapshots/postgres_regress/subselect@68.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO orderstest VALUES (1, 1, false);"
---
InsertStmt@0..44
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "orderstest"
  Whitespace@22..23 " "
  SelectStmt@23..42
    Values@23..29 "VALUES"
    Whitespace@29..30 " "
    Ascii40@30..31 "("
    List@31..42
      AConst@31..32
        Iconst@31..32 "1"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..35
        Iconst@34..35 "1"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..42
        FalseP@37..42 "false"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

