crates/pg_syntax/tests/snapshots/postgres_regress/subselect@69.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE VIEW orders_view AS\nSELECT *,\n(SELECT CASE\n   WHEN ord.approver_ref=1 THEN '---' ELSE 'Approved'\n END) AS \"Approved\",\n(SELECT CASE\n WHEN ord.ordercanceled\n THEN 'Canceled'\n ELSE\n  (SELECT CASE\n\t\tWHEN ord.po_ref=1\n\t\tTHEN\n\t\t (SELECT CASE\n\t\t\t\tWHEN ord.approver_ref=1\n\t\t\t\tTHEN '---'\n\t\t\t\tELSE 'Approved'\n\t\t\tEND)\n\t\tELSE 'PO'\n\tEND)\nEND) AS \"Status\",\n(CASE\n WHEN ord.ordercanceled\n THEN 'Canceled'\n ELSE\n  (CASE\n\t\tWHEN ord.po_ref=1\n\t\tTHEN\n\t\t (CASE\n\t\t\t\tWHEN ord.approver_ref=1\n\t\t\t\tTHEN '---'\n\t\t\t\tELSE 'Approved'\n\t\t\tEND)\n\t\tELSE 'PO'\n\tEND)\nEND) AS \"Status_OK\"\nFROM orderstest ord;"
---
ViewStmt@0..576
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  View@7..11 "VIEW"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "orders_view"
  Whitespace@23..24 " "
  As@24..26 "AS"
  Newline@26..27 "\n"
  SelectStmt@27..575
    Select@27..33 "SELECT"
    Whitespace@33..34 " "
    ResTarget@34..35
      ColumnRef@34..35
        AStar@34..35
          Ascii42@34..35 "*"
    Ascii44@35..36 ","
    Newline@36..37 "\n"
    ResTarget@37..123
      SubLink@37..108
        SelectStmt@37..108
          Ascii40@37..38 "("
          Select@38..44 "SELECT"
          Whitespace@44..45 " "
          ResTarget@45..108
            CaseExpr@45..108
              Case@45..49 "CASE"
              Newline@49..50 "\n"
              Whitespace@50..53 "   "
              CaseWhen@53..87
                When@53..57 "WHEN"
                Whitespace@57..58 " "
                AExpr@58..76
                  ColumnRef@58..74
                    Ident@58..61 "ord"
                    Ascii46@61..62 "."
                    Ident@62..74 "approver_ref"
                  Ascii61@74..75 "="
                  AConst@75..76
                    Iconst@75..76 "1"
                Whitespace@76..77 " "
                Then@77..81 "THEN"
                Whitespace@81..82 " "
                AConst@82..87
                  Sconst@82..87 "'---'"
              Whitespace@87..88 " "
              Else@88..92 "ELSE"
              Whitespace@92..93 " "
              AConst@93..103
                Sconst@93..103 "'Approved'"
              Newline@103..104 "\n"
              Whitespace@104..105 " "
              EndP@105..108 "END"
      Ascii41@108..109 ")"
      Whitespace@109..110 " "
      As@110..112 "AS"
      Whitespace@112..113 " "
      Ident@113..123 "\"Approved\""
    Ascii44@123..124 ","
    Newline@124..125 "\n"
    ResTarget@125..348
      SubLink@125..335
        SelectStmt@125..335
          Ascii40@125..126 "("
          Select@126..132 "SELECT"
          Whitespace@132..133 " "
          ResTarget@133..335
            CaseExpr@133..335
              Case@133..137 "CASE"
              Newline@137..138 "\n"
              Whitespace@138..139 " "
              CaseWhen@139..178
                When@139..143 "WHEN"
                Whitespace@143..144 " "
                ColumnRef@144..161
                  Ident@144..147 "ord"
                  Ascii46@147..148 "."
                  Ident@148..161 "ordercanceled"
                Newline@161..162 "\n"
                Whitespace@162..163 " "
                Then@163..167 "THEN"
                Whitespace@167..168 " "
                AConst@168..178
                  Sconst@168..178 "'Canceled'"
              Newline@178..179 "\n"
              Whitespace@179..180 " "
              Else@180..184 "ELSE"
              Newline@184..185 "\n"
              Whitespace@185..187 "  "
              SubLink@187..330
                SelectStmt@187..330
                  Ascii40@187..188 "("
                  Select@188..194 "SELECT"
                  Whitespace@194..195 " "
                  ResTarget@195..330
                    CaseExpr@195..330
                      Case@195..199 "CASE"
                      Newline@199..200 "\n"
                      Newline@200..202 "\t\t"
                      CaseWhen@202..312
                        When@202..206 "WHEN"
                        Whitespace@206..207 " "
                        AExpr@207..219
                          ColumnRef@207..217
                            Ident@207..210 "ord"
                            Ascii46@210..211 "."
                            Ident@211..217 "po_ref"
                          Ascii61@217..218 "="
                          AConst@218..219
                            Iconst@218..219 "1"
                        Newline@219..220 "\n"
                        Newline@220..222 "\t\t"
                        Then@222..226 "THEN"
                        Newline@226..227 "\n"
                        Newline@227..229 "\t\t"
                        Whitespace@229..230 " "
                        SubLink@230..312
                          SelectStmt@230..312
                            Ascii40@230..231 "("
                            Select@231..237 "SELECT"
                            Whitespace@237..238 " "
                            ResTarget@238..312
                              CaseExpr@238..312
                                Case@238..242 "CASE"
                                Newline@242..243 "\n"
                                Newline@243..247 "\t\t\t\t"
                                CaseWhen@247..285
                                  When@247..251 "WHEN"
                                  Whitespace@251..252 " "
                                  AExpr@252..270
                                    ColumnRef@252..268
                                      Ident@252..255 "ord"
                                      Ascii46@255..256 "."
                                      Ident@256..268 "approver_ref"
                                    Ascii61@268..269 "="
                                    AConst@269..270
                                      Iconst@269..270 "1"
                                  Newline@270..271 "\n"
                                  Newline@271..275 "\t\t\t\t"
                                  Then@275..279 "THEN"
                                  Whitespace@279..280 " "
                                  AConst@280..285
                                    Sconst@280..285 "'---'"
                                Newline@285..286 "\n"
                                Newline@286..290 "\t\t\t\t"
                                Else@290..294 "ELSE"
                                Whitespace@294..295 " "
                                AConst@295..305
                                  Sconst@295..305 "'Approved'"
                                Newline@305..306 "\n"
                                Newline@306..309 "\t\t\t"
                                EndP@309..312 "END"
                      Ascii41@312..313 ")"
                      Newline@313..314 "\n"
                      Newline@314..316 "\t\t"
                      Else@316..320 "ELSE"
                      Whitespace@320..321 " "
                      AConst@321..325
                        Sconst@321..325 "'PO'"
                      Newline@325..326 "\n"
                      Newline@326..327 "\t"
                      EndP@327..330 "END"
              Ascii41@330..331 ")"
              Newline@331..332 "\n"
              EndP@332..335 "END"
      Ascii41@335..336 ")"
      Whitespace@336..337 " "
      As@337..339 "AS"
      Whitespace@339..340 " "
      Ident@340..348 "\"Status\""
    Ascii44@348..349 ","
    Newline@349..350 "\n"
    ResTarget@350..555
      Ascii40@350..351 "("
      CaseExpr@351..539
        Case@351..355 "CASE"
        Newline@355..356 "\n"
        Whitespace@356..357 " "
        CaseWhen@357..396
          When@357..361 "WHEN"
          Whitespace@361..362 " "
          ColumnRef@362..379
            Ident@362..365 "ord"
            Ascii46@365..366 "."
            Ident@366..379 "ordercanceled"
          Newline@379..380 "\n"
          Whitespace@380..381 " "
          Then@381..385 "THEN"
          Whitespace@385..386 " "
          AConst@386..396
            Sconst@386..396 "'Canceled'"
        Newline@396..397 "\n"
        Whitespace@397..398 " "
        Else@398..402 "ELSE"
        Newline@402..403 "\n"
        Whitespace@403..405 "  "
        Ascii40@405..406 "("
        CaseExpr@406..534
          Case@406..410 "CASE"
          Newline@410..411 "\n"
          Newline@411..413 "\t\t"
          CaseWhen@413..516
            When@413..417 "WHEN"
            Whitespace@417..418 " "
            AExpr@418..430
              ColumnRef@418..428
                Ident@418..421 "ord"
                Ascii46@421..422 "."
                Ident@422..428 "po_ref"
              Ascii61@428..429 "="
              AConst@429..430
                Iconst@429..430 "1"
            Newline@430..431 "\n"
            Newline@431..433 "\t\t"
            Then@433..437 "THEN"
            Newline@437..438 "\n"
            Newline@438..440 "\t\t"
            Whitespace@440..441 " "
            Ascii40@441..442 "("
            CaseExpr@442..516
              Case@442..446 "CASE"
              Newline@446..447 "\n"
              Newline@447..451 "\t\t\t\t"
              CaseWhen@451..489
                When@451..455 "WHEN"
                Whitespace@455..456 " "
                AExpr@456..474
                  ColumnRef@456..472
                    Ident@456..459 "ord"
                    Ascii46@459..460 "."
                    Ident@460..472 "approver_ref"
                  Ascii61@472..473 "="
                  AConst@473..474
                    Iconst@473..474 "1"
                Newline@474..475 "\n"
                Newline@475..479 "\t\t\t\t"
                Then@479..483 "THEN"
                Whitespace@483..484 " "
                AConst@484..489
                  Sconst@484..489 "'---'"
              Newline@489..490 "\n"
              Newline@490..494 "\t\t\t\t"
              Else@494..498 "ELSE"
              Whitespace@498..499 " "
              AConst@499..509
                Sconst@499..509 "'Approved'"
              Newline@509..510 "\n"
              Newline@510..513 "\t\t\t"
              EndP@513..516 "END"
          Ascii41@516..517 ")"
          Newline@517..518 "\n"
          Newline@518..520 "\t\t"
          Else@520..524 "ELSE"
          Whitespace@524..525 " "
          AConst@525..529
            Sconst@525..529 "'PO'"
          Newline@529..530 "\n"
          Newline@530..531 "\t"
          EndP@531..534 "END"
        Ascii41@534..535 ")"
        Newline@535..536 "\n"
        EndP@536..539 "END"
      Ascii41@539..540 ")"
      Whitespace@540..541 " "
      As@541..543 "AS"
      Whitespace@543..544 " "
      Ident@544..555 "\"Status_OK\""
    Newline@555..556 "\n"
    From@556..560 "FROM"
    Whitespace@560..561 " "
    RangeVar@561..575
      Ident@561..571 "orderstest"
      Whitespace@571..572 " "
      Alias@572..575
        Ident@572..575 "ord"
  Ascii59@575..576 ";"

